2009-01-05 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/stardict_file.rb: Fixed check_validity.

2009-01-05 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/stardict_file.rb: Added xdxf markup support.

    * lib/fantasdic/ui/utils.rb (TextBuffer#insert_pango_markup): Don't need
    to set a Gtk::TextMark.

2009-01-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb: Fixed bug when the server is
    listening but doesn't talk the right protocol.

2009-01-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/utils.rb: Added Gtk::TextBuffer#insert_pango_markup.
    This allows to insert text in pango markup (pseudo html). The markup
    will be displayed like normal text in case of wrong syntax or unknown tag.
    
    * lib/fantasdic/ui/result_text_view.rb: Use it. For now, it's always used
    but it may be better to activate it only when the source requires it. For
    example, Stardict dictionaries with "sametypesequence=g" use pango markup.

2009-01-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/stardict_file.rb: Stardict file source is now
    usable.

2009-01-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dictd_file.rb: Define and prefix search is now case
    insensitive.

2009-01-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dictd_file.rb: Now supports .dz files.

2009-01-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/dictzip.rb: Added class to read dictzip files.
    Dictzip files are legal gzip files that contain additional information
    in the header. This information can be used by the class to provide pseudo
    random access to the uncompressed file (Dictzip#pos=).

    Concretely, the extra information takes the form of a table of chunk sizes.
    By using this information, it is possible to know which chunk is affected by